kubernetes/argocd-apps/mermaid/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mermaid-service
  namespace: mermaid
spec:
  selector:
    app: mermaid-live
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
