kubernetes/argocd-apps/mermaid/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mermaid-ui-route
  namespace: mermaid
spec:
  parentRefs:
  - name: public-gateway
    namespace: kube-system
    kind: Gateway
  hostnames:
  - "mermaid.home"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mermaid-service
      port: 80
